tests/fixtures/invalid/pow_int_str_list.py
# Cannot call pow() with Int, Str, List[int]
x = pow(1, "hello", [1, 2, 3])
